[package]
name = "rust-ping-pong-service"
version = "0.1.0"
edition = "2021"
authors = ["manta <lichinclan@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.1"
env_logger = "0.9.0"
futures = "0.3.21"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1", features = ["full"] }

